--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,6 @@ jobs:
         with:
           distribution: goreleaser
           version: "~> v2"
-          args: release --rm-dist --clean
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
